- change to Spring Boot - change tests from H2 database to Tescontainers - change Maven to Gradle - change dockerfile and readme